<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    style="@android:style/Widget.Material.Button.Borderless"
    android:gravity="start"
    android:id="@+id/expenseEntryParent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/background_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/expenses_list_noamount"
        android:id="@+id/expenseListItemAmount"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/expenses_list_nodeadline"
        android:id="@+id/expenseListItemStartDeadline"
        android:paddingStart="10dp"
        android:layout_below="@id/expenseListItemAmount"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/expenses_list_nonextdeadline"
        android:id="@+id/expenseListItemNextDeadline"
        android:paddingStart="10dp"
        android:layout_below="@id/expenseListItemStartDeadline"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Reminder: no reminder set"
        android:id="@+id/expenseListItemReminder"
        android:paddingStart="10dp"
        android:layout_below="@id/expenseListItemNextDeadline"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/expenses_list_nocat"
        android:id="@+id/expenseListItemCategory"
        android:paddingStart="10dp"
        android:layout_below="@id/expenseListItemReminder" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/expenses_list_nodesc"
        android:id="@+id/expenseListItemDescription"
        android:paddingStart="10dp"
        android:layout_below="@id/expenseListItemCategory" />

</RelativeLayout>