<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateRelativeLayout"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dateTextView"
                android:text="Monthly payment deadline"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingBottom="0dp"
                android:layout_centerHorizontal="true" />

            <DatePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePicker"
                style="@android:style/Widget.DatePicker"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/dateTextView" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePickerHidden"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/dateTextView"
                android:visibility="gone" />

        </RelativeLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/dateRelativeLayout"
            android:layout_centerHorizontal="true"
            android:id="@+id/radioGroup">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yearlyRadioButton"
                android:text="Yearly" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/monthlyRadioButton"
                android:text="Monthly" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weeklyRadioButton"
                android:text="Weekly" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentStart="true">

            <EditText
                android:id="@+id/amount"
                android:inputType="numberDecimal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/amountLabel"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/amountLabel"
                android:labelFor="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/amount"
                android:paddingStart="@dimen/createExpenseLabelsLeftPadding"
                android:paddingEnd="@dimen/createExpenseLabelsRightPadding"
                android:text="@string/amountLabelText" />

            <EditText
                android:id="@+id/category"
                android:text="@string/categoryEditTextDefault"
                android:inputType="text"
                android:layout_below="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/amount"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/amountLabel"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/categoryLabel"
                android:labelFor="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/category"
                android:paddingStart="@dimen/createExpenseLabelsLeftPadding"
                android:paddingEnd="@dimen/createExpenseLabelsRightPadding"
                android:text="@string/categoryLabelText"/>

            <EditText
                android:id="@+id/description"
                android:text="@string/descriptionEditTextDefault"
                android:inputType="text"
                android:layout_below="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/category"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/descriptionLabel"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:labelFor="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/description"
                android:paddingStart="@dimen/createExpenseLabelsLeftPadding"
                android:paddingEnd="@dimen/createExpenseLabelsRightPadding"
                android:text="@string/descriptionLabelText"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setRemainderBtn"
                android:text="set reminder"
                android:layout_below="@+id/description"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/description" />

        </RelativeLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/submitBtnText"/>

    </RelativeLayout>

</ScrollView>